feat(cli): upgrade to Shard 2.0 and bump version to v0.2.0
- Updated CLI to support stateful 1-RTT handshake before transmission.
- Enriched all READMEs (Core, SDK, CLI) with Shard 2.0 technical details.
- Bumped workspace and crate versions to v0.2.0.
- Verified end-to-end compatibility with the new stateful session architecture.